--- a/implementacion/servicios/build.gradle
+++ b/implementacion/servicios/build.gradle
@@ -23,6 +23,13 @@ eclipse {
 	}
 }
 
+configurations.all {
+	resolutionStrategy{
+		force 'org.javassist:javassist:3.17.1-GA'
+		forcedModules = ['org.javassist:javassist:3.17.1-GA']
+	}
+}
+
 dependencies {
 	compile group: 'org.springframework', name: 'spring-web', version: '4.2.5.RELEASE'
 	compile group: 'org.springframework', name: 'spring-core', version: '4.2.5.RELEASE'
