--- a/implementacion/core/build.gradle
+++ b/implementacion/core/build.gradle
@@ -88,7 +88,7 @@ dependencies {
 	compile group: 'org.springframework', name:  'spring-expression', version: '4.2.5.RELEASE'
 	compile group: 'org.springframework', name:  'spring-beans', version: '4.2.5.RELEASE'
 	compile group: 'org.springframework', name: 'spring-web', version: '4.2.5.RELEASE'
-  	compile 'org.springframework.data:spring-data-jpa:1.10.1.RELEASE'
+  	compile 'org.springframework.data:spring-data-jpa:1.10.2.BUILD-SNAPSHOT'
 	compile 'org.hibernate:hibernate-entitymanager:5.1.0.Final'
 	compile group: 'commons-dbcp', name: 'commons-dbcp', version: '1.4'
   	compile 'org.apache.logging.log4j:log4j-core:2.5'
